# LayoutVLM

./: .gitignore  README.md  annotations_single_room.csv  create_empty_renders.py  generate_scene.py  main.py  pyproject.toml  render_scene.py  run_from_csv.py  run_multiworker.py
scripts/: generate_curated_features.py  run_parallel_generation.sh
src/layoutvlm/: layoutvlm.py  objaverse_retriever.py  prompts.py  sandbox.py  scene_generator.py
utils/: blender_render.py
