[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "layoutvlm"
version = "0.1.0"
description = "Differentiable Optimization of 3D Layout via Vision-Language Models"
readme = "README.md"
license = {text = "MIT"}
requires-python = "==3.10.*"

dependencies = [
    "numpy<2",
    "openai>=1.0.0",
    "torch>=1.9.0",
    "scipy>=1.7.0",
    "tqdm>=4.62.0",
    "shapely>=2.0.0",
    "imageio>=2.9.0",
    "pydantic>=2.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.2",
    "opencv-python>=4.5.0",
    "pillow>=9.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "pyyaml>=6.0.0",
    "requests>=2.28.0",
    "bpy==3.6.0",
    "trimesh>=3.9.0",
    "mathutils",
    "matplotlib",
    # Scene generation dependencies
    "open-clip-torch>=2.20.0",
    "sentence-transformers>=2.0.0",
    "compress-json>=1.1.0",
    "compress-pickle>=2.1.0",
    "objathor>=0.0.8",
    "objaverse>=0.1.7",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["layoutvlm*"]

[tool.uv]
find-links = ["https://download.blender.org/pypi/bpy/"]
